carousel.css
/* ... */
[data-sdl-plugin="collection-carousel"] .slide-image.aspect-ratio img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

[data-sdl-plugin="collection-carousel"] .slide-thumbnail-link {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

[data-sdl-plugin="collection-carousel"]
  .content-title:has(:scope + *:not(.content-metadata-below-title)) {
  margin-bottom: var(--title-spacing, 17px);
}

/*Notification*/
[data-sdl-plugin="collection-carousel"] .collection-carousel-notification {
  position: absolute;
  display: none;
  z-index: 10 ;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 300px;
  background-color: hsla(var(--black-hsl),0.75);
  backdrop-filter: blur(5px);
  border-radius: 10px;
  padding: 17px;
  margin: 17px !important;
}
.sqs-edit-mode [data-sdl-plugin="collection-carousel"] .collection-carousel-notification {
  display: block
}
[data-sdl-plugin="collection-carousel"] .collection-carousel-notification p{
  font-size: 0.9rem;
  color: hsla(var(--white-hsl),1);
  margin: 0;
}


/*Title*/
[data-sdl-plugin="collection-carousel"] .content-title > * {
  margin: 0;

  --heading-3-size-value: 1.4;
  --heading-3-font-size: calc((var(--heading-3-size-value) - 1) * 1.2vw + 1rem);
  --heading-3-line-height: calc(
    var(--heading-font-line-height) *
      (1 + (1 - var(--heading-3-size-value)) / 25)
  );

  font-size: var(--sdl-cc-title-font-size, var(--heading-3-font-size, 1rem));
  font-family: var(--sdl-cc-title-font-family, var(--heading-font-font-family));
  color: var(--sdl-cc-title-color, var(--headingMediumColor));
  text-align: var(--sdl-cc-title-text-align, start);
}

/* Price */
[data-sdl-plugin="collection-carousel"] .content-price {
  margin: 0;
  margin-bottom: var(--price-spacing, 17px);
}
[data-sdl-plugin="collection-carousel"] .content-price .price {
  margin: 0;

  --normal-text-size-value: 1;
  --paragraph-font-size: calc(
    (var(--normal-text-size-value) - 1) * 1.2vw + 1rem
  );
  font-size: var(--sdl-cc-price-font-size, var(--paragraph-font-size, 1rem));
  color: var(--sdl-cc-price-color, var(--paragraphMediumColor));
}

/* Event Dates */
[data-sdl-plugin="collection-carousel"] .content-event-dates {
  margin-top: var(--event-dates-spacing, 17px);
  margin-bottom: var(--event-dates-spacing, 17px);
}
[data-sdl-plugin="collection-carousel"] .content-event-dates .event-dates {
  margin: 0;

  --normal-text-size-value: 1;
  --paragraph-font-size: calc(
    (var(--normal-text-size-value) - 1) * 1.2vw + 1rem
  );
  font-size: var(
    --sdl-cc-event-dates-font-size,
    var(--paragraph-font-size, 1rem)
  );
  color: var(--sdl-cc-event-dates-color, var(--paragraphMediumColor));
}

/*Excerpt*/
[data-sdl-plugin="collection-carousel"] .content-excerpt > * {
  --normal-text-size-value: 1;
  --paragraph-font-size: calc(
    (var(--normal-text-size-value) - 1) * 1.2vw + 1rem
  );
  font-size: var(--sdl-cc-excerpt-font-size, var(--paragraph-font-size, 1rem));
  color: var(--sdl-cc-excerpt-color, var(--paragraphMediumColor));
  text-align: var(--sdl-cc-excerpt-text-align, start);
}

[data-sdl-plugin="collection-carousel"] .content-excerpt > *:first-child {
  margin-top: 0;
}

[data-sdl-plugin="collection-carousel"] .content-excerpt > *:last-child {
  margin-bottom: 0;
}

[data-sdl-plugin="collection-carousel"] .content-excerpt {
  margin-top: var(--excerpt-spacing, 12px);
  margin-bottom: var(--excerpt-spacing, 17px);
}

[data-sdl-plugin="collection-carousel"] .metadata-group {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 0 var(--metadata-gap, 8px);
}

/*Categories & Tags*/
[data-sdl-plugin="collection-carousel"] .categories,
[data-sdl-plugin="collection-carousel"] .tags {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 0 var(--metadata-gap, 8px);
}
[data-sdl-plugin="collection-carousel"] .categories ul,
[data-sdl-plugin="collection-carousel"] .tags ul {
  display: flex;
  flex-wrap: wrap;
  gap: 0 var(--metadata-gap, 8px);
  margin: 0;
  padding: 0;
  list-style: none;
}

[data-sdl-plugin="collection-carousel"] .categories li,
[data-sdl-plugin="collection-carousel"] .tags li {
  display: block;
}

/*Categories*/
[data-sdl-plugin="collection-carousel"] .categories li {
  background-color: var(--sdl-cc-category-background-color, transparent);
  border-radius: var(--sdl-cc-category-border-radius, 0);
  border-width: var(--sdl-cc-category-border-width, 0);
  border-style: var(--sdl-cc-category-border-style, solid);
  border-color: var(--sdl-cc-category-border-color, transparent);
  padding: var(--sdl-cc-category-padding, 0);
  color: var(--sdl-cc-category-color, var(--paragraphMediumColor));
  font-size: var(--sdl-cc-category-font-size, 0.9rem);
}

/*Tags*/
[data-sdl-plugin="collection-carousel"] .tags li {
  background-color: var(--sdl-cc-tag-background-color, transparent);
  border-radius: var(--sdl-cc-tag-border-radius, 0);
  border-width: var(--sdl-cc-tag-border-width, 0);
  border-style: var(--sdl-cc-tag-border-style, solid);
  border-color: var(--sdl-cc-tag-border-color, transparent);
  padding: var(--sdl-cc-tag-padding, 0);
  color: var(--sdl-cc-tag-color, var(--paragraphMediumColor));
  font-size: var(--sdl-cc-tag-font-size, 0.9rem);
}

/*Published Date*/
[data-sdl-plugin="collection-carousel"] .published-on > p {
  margin: 0;

  --normal-text-size-value: 1;
  --paragraph-font-size: calc(
    (var(--normal-text-size-value) - 1) * 1.2vw + 1rem
  );
  font-size: var(--sdl-cc-published-date-font-size, 0.9rem);
  color: var(--sdl-cc-published-date-color, var(--paragraphMediumColor));
}

/*Author*/
[data-sdl-plugin="collection-carousel"] .author > p {
  margin: 0;

  --normal-text-size-value: 1;
  --paragraph-font-size: calc(
    (var(--normal-text-size-value) - 1) * 1.2vw + 1rem
  );
  font-size: var(--sdl-cc-author-font-size, 0.9rem);
  color: var(--sdl-cc-author-color, var(--paragraphMediumColor));
}
/* ... */

